# create-react-app-wasm

./: README.md  create-react-app-wasm.code-workspace  package.json
core/: .gitignore  Cargo.toml
core/src/: lib.rs
crate/: Cargo.toml  Makefile  package.json
crate/src/: audio.rs  greet.rs  lib.rs
web/: .gitignore  craco.config.js  package.json
web/src/: App.tsx
web/src/utils/: hooks.ts  text.ts
