[package]
name = "create-react-app-wasm"
version = "0.1.0"
authors = []
edition = "2018"
description = ""
repository = ""
license = "LICENSE"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.50", features = ['serde-serialize'] }
js-sys = "0.3.27"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.40"

[dependencies.web-sys]
version = "0.3.27"
features = [
  'console',
  'AudioContext',
  'AudioDestinationNode',
  'AudioNode',
  'AudioParam',
  'GainNode',
  'OscillatorNode',
  'OscillatorType',
]

[dev-dependencies]
wasm-bindgen-test = "0.2.50"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html